[gd_scene load_steps=8 format=3 uid="uid://c1ymug51gg1wk"]

[ext_resource type="Theme" uid="uid://dtwht8jmrvwlb" path="res://assets/game_theme.tres" id="1_sf245"]
[ext_resource type="Script" path="res://combat/combat.gd" id="1_t1v5l"]
[ext_resource type="Texture2D" uid="uid://dqlv6ilhc708n" path="res://assets/Pixel Art GUI Elements.png" id="2_glje3"]
[ext_resource type="Texture2D" uid="uid://dlswwo0wt54iu" path="res://assets/image-removebg-preview.png" id="3_r8t6b"]
[ext_resource type="PackedScene" uid="uid://b81hbcui4rqx7" path="res://combat_enemy.tscn" id="6_ep1ne"]

[sub_resource type="Gradient" id="Gradient_f37mk"]
offsets = PackedFloat32Array(0.307229, 1)
colors = PackedColorArray(0.0633823, 0.459154, 0.331824, 1, 0, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dinga"]
gradient = SubResource("Gradient_f37mk")

[node name="combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sf245")
script = ExtResource("1_t1v5l")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_dinga")

[node name="enemy_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.611763
anchor_top = 0.124244
anchor_right = 0.9613
anchor_bottom = 0.554956
offset_left = 0.471924
offset_top = 0.271999
offset_right = -0.232056
offset_bottom = 0.216003
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="enemy_panel"]
layout_mode = 2
texture = ExtResource("2_glje3")
region_rect = Rect2(81, 97, 30, 30)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="enemy_panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="enemy_image" type="TextureRect" parent="enemy_panel/MarginContainer"]
layout_mode = 2
expand_mode = 5

[node name="player_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0375
anchor_top = 0.155556
anchor_right = 0.467688
anchor_bottom = 0.619933
offset_right = -0.32
offset_bottom = -0.176003
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="player_panel"]
layout_mode = 2
texture = ExtResource("3_r8t6b")
expand_mode = 5

[node name="dialog_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.64985
anchor_top = 0.577089
anchor_right = 0.96285
anchor_bottom = 0.944244
offset_left = 0.095993
offset_top = 0.247986
offset_right = -0.224014
offset_bottom = 0.071991
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="dialog_panel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ScrollContainer" type="ScrollContainer" parent="dialog_panel/MarginContainer"]
layout_direction = 2
layout_mode = 2
vertical_scroll_mode = 2

[node name="message_VBoxContainer" type="VBoxContainer" parent="dialog_panel/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="menu_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03735
anchor_top = 0.665978
anchor_right = 0.183163
anchor_bottom = 0.888689
offset_left = 0.095993
offset_top = 0.247986
offset_right = -0.224014
offset_bottom = 0.071991
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="menu_panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="menu_panel/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Basic ATK"

[node name="Button3" type="Button" parent="menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bag"

[node name="Button4" type="Button" parent="menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Catch"

[node name="player_health_mana_energy_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.022
anchor_right = 0.467187
anchor_bottom = 0.133
offset_left = 0.32
offset_top = 0.0799994
offset_bottom = 0.119999
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="player_health_mana_energy_container"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="player_health_mana_energy_container/MarginContainer"]
layout_mode = 2

[node name="player_health_bar" type="ProgressBar" parent="player_health_mana_energy_container/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="enemy_health_mana_energy_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.612
anchor_top = 0.022
anchor_right = 0.960938
anchor_bottom = 0.110778
offset_left = 0.32
offset_top = 0.0799994
offset_bottom = 0.119999
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="enemy_health_mana_energy_container"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="enemy_health_mana_energy_container/MarginContainer"]
layout_mode = 2

[node name="enemy_health_bar" type="ProgressBar" parent="enemy_health_mana_energy_container/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="player_spell_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.212
anchor_top = 0.667
anchor_right = 0.625
anchor_bottom = 0.978
offset_left = 0.319992
offset_top = -0.120026
offset_bottom = -0.0800171
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="player_spell_container"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="player_spell_container/MarginContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="spell_v_container" type="VBoxContainer" parent="player_spell_container/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 176.0
offset_top = 184.0
offset_right = 387.0
offset_bottom = 208.0
text = "FRIENDLY DOES DAMAGE"

[node name="combat_enemy" parent="." instance=ExtResource("6_ep1ne")]

[node name="Button2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.422222
anchor_right = 0.548437
anchor_bottom = 0.466667
offset_right = 8.0
offset_bottom = 8.0
text = "ENEMY DOES DAMAGE"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.222222
anchor_right = 0.162
anchor_bottom = 0.266222
offset_right = 0.32
offset_bottom = 0.159999
text = "test"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
